Fix PowerShell syntax errors and simplify production setup
- Fixed PowerShell syntax errors in tasks.json (quotes around env vars)
- Changed DEV_MODE default to False for production use
- Removed unnecessary DEV_MODE and FLASK_ENV from task
- Updated cloudflare-tunnel.yml to use 127.0.0.1 instead of localhost
- Added .env.example for development configuration
- Task now works without syntax errors

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,14 @@ firebase_web_config.json
 credentials.json
 client_secret*.json
 
+# Cloudflare
+cloudflare-tunnel.yml
+*.toml
+
+# Logs
+*.log
+app.log
+
 # IDE
 .vscode/
 .idea/
@@ -55,10 +63,6 @@ Thumbs.db
 htmlcov/
 *.cover
 .hypothesis/
-
-# Logs
-*.log
-logs/
 
 # Database
 *.db
